Fix up spacing and styling of links in columns

--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,23 @@ footer>div:first-of-type div > ul > li:first-of-type ul  {
   column-count: 2;
 }
 
-footer>div:first-of-type div > ul > li > ul li {
-  /*padding-top: 16px; */
+/* this kinda annoying and tricky to apply styles to the footer lists in the right way */
+footer>div:first-of-type div > ul > li:nth-child(1) ul li:nth-child(n+2):nth-child(-n+5) {
+  padding-top: 16px;
+}
+
+footer>div:first-of-type div > ul > li:nth-child(1) ul li:nth-child(n+7):nth-child(-n+9) {
+  padding-top: 16px;
+}
+
+footer>div:first-of-type div > ul > li:nth-child(n+2) ul li:nth-child(n+2) {
+  padding-top: 16px;
+}
+
+/* view all link */
+footer>div:first-of-type div > ul > li:nth-child(1) ul li:nth-child(5) a {
+  color: #1473e6;
+  font-weight: bold;
 }
 
 footer>div:first-of-type div > ul > li > ul li a {
@@ -133,6 +148,7 @@ footer>div:first-of-type div > ul > li > ul li a {
   font-family: adobe-clean-ux,adobe-clean,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,sans-serif;
   font-weight: 400;
   line-height: 21px;
+
 }
 
 footer>div:first-of-type div > ul > li > ul li a:hover {
